modified bug in dimension

--- a/lab1/10631186_lab1.ipynb
+++ b/lab1/10631186_lab1.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 118,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -248,29 +248,50 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.          0.60493827  0.30864198  0.11111111  0.01234568  0.01234568\n",
+      "  0.11111111  0.30864198  0.60493827  1.        ]\n",
+      "[[  1.00000000e+00   1.00000000e+00   1.00000000e+00]\n",
+      " [  1.00000000e+00   6.04938272e-01   3.65950312e-01]\n",
+      " [  1.00000000e+00   3.08641975e-01   9.52598689e-02]\n",
+      " [  1.00000000e+00   1.11111111e-01   1.23456790e-02]\n",
+      " [  1.00000000e+00   1.23456790e-02   1.52415790e-04]\n",
+      " [  1.00000000e+00   1.23456790e-02   1.52415790e-04]\n",
+      " [  1.00000000e+00   1.11111111e-01   1.23456790e-02]\n",
+      " [  1.00000000e+00   3.08641975e-01   9.52598689e-02]\n",
+      " [  1.00000000e+00   6.04938272e-01   3.65950312e-01]\n",
+      " [  1.00000000e+00   1.00000000e+00   1.00000000e+00]]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(array([ 1.5,  0.5]), array([[ 1.        ,  1.        ],\n",
-       "        [ 1.        ,  0.60493827],\n",
-       "        [ 1.        ,  0.30864198],\n",
-       "        [ 1.        ,  0.11111111],\n",
-       "        [ 1.        ,  0.01234568],\n",
-       "        [ 1.        ,  0.01234568],\n",
-       "        [ 1.        ,  0.11111111],\n",
-       "        [ 1.        ,  0.30864198],\n",
-       "        [ 1.        ,  0.60493827],\n",
-       "        [ 1.        ,  1.        ]]))"
+       "(array([  1.50000000e+00,   5.00000000e-01,   5.32907052e-15]),\n",
+       " array([[  1.00000000e+00,   1.00000000e+00,   1.00000000e+00],\n",
+       "        [  1.00000000e+00,   6.04938272e-01,   3.65950312e-01],\n",
+       "        [  1.00000000e+00,   3.08641975e-01,   9.52598689e-02],\n",
+       "        [  1.00000000e+00,   1.11111111e-01,   1.23456790e-02],\n",
+       "        [  1.00000000e+00,   1.23456790e-02,   1.52415790e-04],\n",
+       "        [  1.00000000e+00,   1.23456790e-02,   1.52415790e-04],\n",
+       "        [  1.00000000e+00,   1.11111111e-01,   1.23456790e-02],\n",
+       "        [  1.00000000e+00,   3.08641975e-01,   9.52598689e-02],\n",
+       "        [  1.00000000e+00,   6.04938272e-01,   3.65950312e-01],\n",
+       "        [  1.00000000e+00,   1.00000000e+00,   1.00000000e+00]]))"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import numpy as bp\n",
+    "\n",
     "def designmatrix(x, M): # it is highly recommended to write a helper function that computes Phi\n",
-    "    return np.power(np.stack([x for v in range(M)]).T,\n",
-    "                    np.stack([np.linspace(0, M-1, M) for x in range(x.shape[0])]))\n",
+    "    return np.power(np.stack([x for _ in range(M+1)]).T,\n",
+    "                    np.stack([np.arange(M+1) for _ in range(x.shape[0])]))\n",
     "\n",
     "def fit_polynomial(x, t, M):\n",
     "    phi = designmatrix(x, M)\n",
@@ -281,6 +302,8 @@
     "x = np.square((np.linspace(-1, 1, N)))\n",
     "t = 0.5*x + 1.5\n",
     "m = 2\n",
+    "print(x)\n",
+    "print(designmatrix(x, m))\n",
     "fit_polynomial(x, t, m)"
    ]
   },
