renamed lab file

--- a/lab1/10631186_10260250_lab1.ipynb
+++ b/lab1/10631186_10260250_lab1.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 122,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -246,48 +246,9 @@
      "solution": true
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 1.          0.60493827  0.30864198  0.11111111  0.01234568  0.01234568\n",
-      "  0.11111111  0.30864198  0.60493827  1.        ]\n",
-      "[[  1.00000000e+00   1.00000000e+00   1.00000000e+00]\n",
-      " [  1.00000000e+00   6.04938272e-01   3.65950312e-01]\n",
-      " [  1.00000000e+00   3.08641975e-01   9.52598689e-02]\n",
-      " [  1.00000000e+00   1.11111111e-01   1.23456790e-02]\n",
-      " [  1.00000000e+00   1.23456790e-02   1.52415790e-04]\n",
-      " [  1.00000000e+00   1.23456790e-02   1.52415790e-04]\n",
-      " [  1.00000000e+00   1.11111111e-01   1.23456790e-02]\n",
-      " [  1.00000000e+00   3.08641975e-01   9.52598689e-02]\n",
-      " [  1.00000000e+00   6.04938272e-01   3.65950312e-01]\n",
-      " [  1.00000000e+00   1.00000000e+00   1.00000000e+00]]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(array([  1.50000000e+00,   5.00000000e-01,   5.32907052e-15]),\n",
-       " array([[  1.00000000e+00,   1.00000000e+00,   1.00000000e+00],\n",
-       "        [  1.00000000e+00,   6.04938272e-01,   3.65950312e-01],\n",
-       "        [  1.00000000e+00,   3.08641975e-01,   9.52598689e-02],\n",
-       "        [  1.00000000e+00,   1.11111111e-01,   1.23456790e-02],\n",
-       "        [  1.00000000e+00,   1.23456790e-02,   1.52415790e-04],\n",
-       "        [  1.00000000e+00,   1.23456790e-02,   1.52415790e-04],\n",
-       "        [  1.00000000e+00,   1.11111111e-01,   1.23456790e-02],\n",
-       "        [  1.00000000e+00,   3.08641975e-01,   9.52598689e-02],\n",
-       "        [  1.00000000e+00,   6.04938272e-01,   3.65950312e-01],\n",
-       "        [  1.00000000e+00,   1.00000000e+00,   1.00000000e+00]]))"
-      ]
-     },
-     "execution_count": 118,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import numpy as bp\n",
+    "import numpy as np\n",
     "\n",
     "def designmatrix(x, M): # it is highly recommended to write a helper function that computes Phi\n",
     "    return np.power(np.stack([x for _ in range(M+1)]).T,\n",
@@ -295,21 +256,12 @@
     "\n",
     "def fit_polynomial(x, t, M):\n",
     "    phi = designmatrix(x, M)\n",
-    "    return np.dot(np.dot(np.linalg.pinv(np.dot(phi.T, phi)), phi.T), t).T, phi\n",
-    "\n",
-    "\n",
-    "N = 10\n",
-    "x = np.square((np.linspace(-1, 1, N)))\n",
-    "t = 0.5*x + 1.5\n",
-    "m = 2\n",
-    "print(x)\n",
-    "print(designmatrix(x, m))\n",
-    "fit_polynomial(x, t, m)"
+    "    return np.dot(np.dot(np.linalg.pinv(np.dot(phi.T, phi)), phi.T), t).T, phi\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 120,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -323,20 +275,7 @@
      "solution": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.15357143 -0.17678571 -0.20357143  0.07321429  0.65357143  0.65357143\n",
-      "   0.07321429 -0.20357143 -0.17678571  0.15357143]\n",
-      " [-1.15714286  1.02857143  1.60714286  0.57857143 -2.05714286 -2.05714286\n",
-      "   0.57857143  1.60714286  1.02857143 -1.15714286]\n",
-      " [ 1.44642857 -0.72321429 -1.44642857 -0.72321429  1.44642857  1.44642857\n",
-      "  -0.72321429 -1.44642857 -0.72321429  1.44642857]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Test your function\n",
     "N = 10\n",
