laatste vragen bijna af

--- a/lab1/10631186_10260250_lab1_2.ipynb
+++ b/lab1/10631186_10260250_lab1_2.ipynb
@@ -74,6 +74,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
+    "collapsed": false,
     "deletable": false,
     "editable": false,
     "nbgrader": {
@@ -153,6 +154,7 @@
    "cell_type": "code",
    "execution_count": 89,
    "metadata": {
+    "collapsed": false,
     "deletable": false,
     "nbgrader": {
      "checksum": "52120becec3d311efee47b72cf08402a",
@@ -318,6 +320,7 @@
    "cell_type": "code",
    "execution_count": 91,
    "metadata": {
+    "collapsed": false,
     "deletable": false,
     "nbgrader": {
      "checksum": "0009313fff1f2cd716d4e81f0f2ec5ff",
@@ -583,6 +586,7 @@
    "cell_type": "code",
    "execution_count": 144,
    "metadata": {
+    "collapsed": false,
     "deletable": false,
     "nbgrader": {
      "checksum": "65930a94ed4b46300fcf5aef054662a0",
@@ -670,6 +674,7 @@
    "cell_type": "code",
    "execution_count": 170,
    "metadata": {
+    "collapsed": false,
     "deletable": false,
     "nbgrader": {
      "checksum": "9600d75426aa084eff763220c868f3da",
@@ -1120,7 +1125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
