laatste vragen bijna af

--- a/lab1/10631186_10260250_lab1.ipynb
+++ b/lab1/10631186_10260250_lab1.ipynb
@@ -1160,10 +1160,7 @@
     "beta = N/(2Ed(Mn))\n",
     "where Ed is the sum of squared error function (p 144)\n",
     "\n",
-    "beta = 100/ 2 Ed(Mn)\n",
-    "Ed moet dus 2 zijn\n",
-    "\n",
-    "Ed = 1/2 \n"
+    "beta = 100/ 2 Ed(Mn) \n"
    ]
   },
   {
