--- a/lab3/lab3.ipynb
+++ b/lab3/lab3.ipynb
@@ -484,7 +484,8 @@
     "    return Kt + np.identity(len(x_train))/beta\n",
     "\n",
     "def gp_predictive_distribution(x_train, t_train, x_test, theta, beta, C=None):\n",
-    "    C= compute_C(x_train, theta, beta)\n",
+    "    if C=None:\n",
+    "        C= compute_C(x_train, theta, beta)\n",
     "    \n",
     "    k = computeK(x_train, x_test, theta)\n",
     "    k_transposed = k.T\n",
